# pop

./: .gitignore  .resumable_evaluation_script.sh.swp  .resumable_training_script.sh.swp  LICENSE  README.md  README.org  curriculum_xxs_mixed_reward.toml  debugging_resumable_evaluation_script.sh  debugging_resumable_training_script.sh  dpop_small.toml  evaluation.ipynb  evaluation_scratch_book.ipynb  l2rpn_sandbox_feature_ranges.json  launch.json  pyproject.toml  pyrightconfig.json  resumable_evaluation_script.sh  resumable_training_script.sh
.direnv/python-3.8.12/: pyvenv.cfg
architectures/: ddgcn_agent_xxs.json.json  ddgcn_conv_large_arch.json  ddgcn_conv_medium_arch.json  ddgcn_conv_small_arch.json  ddgcn_egat_arch.json  dpop_agent_xxs.json  dpop_base.toml  dpop_simple.toml  dpop_small.toml  dpop_small_curiosity.toml  dpop_very_small.toml  egat_architecture_frame.toml  egat_architecture_small.toml  egat_architecture_very_small.toml  gat_architecture_frame.toml  gat_architecture_small.toml
architectures/frames/: advantage_stream_frame.toml  egat_architecture_frame.toml  egat_small_architecture_frame.toml  gat_architecture_frame.toml  value_stream_frame.toml
pop/: community_detector.py  constants.py  conv_dueling_gcn.py  dueling_gcn.py  egat_dueling_gcn.py  gcn.py  gcn_agent.py  louvain.py  main.py  new_pyproject.toml  pointer_network.py  power_supply_modularity.py  profile_results  utilities.py  utility.py
pop/GNN/: egat_gcn.py  (+6 more)
resources/: ddgcn_agent.json  ddgcn_conv_arch.json  ddgcn_egat_arch.json  dpop_agent_xxs.json
run_files/: dpop_base.toml  dpop_rte_10.toml  dpop_rte_10_resumable.toml  dpop_rte_1e4.toml  dpop_rte_1e4_load.toml  dpop_rte_curiosity.toml  dpop_rte_very_small.toml  dpop_simple.toml
tests/: test_community_detector.py  test_pop.py
(+214 files in other folders)
