[tool.poetry]
name = "pop"
version = "0.1.0"
description = "Powergrid Operation with MultiAgent Reinforcement Learning"
authors = ["dpaletti <danielepaletti98@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
Grid2Op = "^1.7.2"
torch = "^1.11.0"
prettytable = "^2.2.0"
# DGL needs to be installed separately
# dgl = {url = "https://data.dgl.ai/wheels/dgl-0.8.1-cp39-cp39-manylinux1_x86_64.whl", platform = "linux"}
# dglgo = "^0.0.1"
numba = "^0.55.1"
scipy = "1.7.0"
matplotlib = "^3.5.1"
tensorboard = "^2.8.0"
joblib = "^1.1.0"
pathos = "^0.2.8"
ray = {version = "1.13", extras = ["rrlib"]}
dm-tree = "^0.1.7"
pydantic = "^1.9.1"
numexpr = "^2.8.3"
pylru = "^1.2.1"
pandas = "1.0.3"
networkx = "2.6.2"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
main = "pop.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
